implemented save feature for MODE